# research-code-skill

./: .gitignore  LICENSE  README.en.md  README.md  README.zh.md  SKILL.md  SKILL.zh.md  index.html  requirements.txt
docs/: index.html
examples/: review_request.md  review_request.zh.md  sample_report.md  sample_report.zh.md
scripts/: audit_style.py  (+3 more)
templates/project_skeleton/: .env.example  .gitignore  .pre-commit-config.yaml  MANIFEST.md  MANIFEST.zh.md  Makefile  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.py
templates/project_skeleton/.github/workflows/: ci.yaml
templates/project_skeleton/configs/: eval.yaml  train.yaml
templates/project_skeleton/configs/callbacks/: default.yaml
templates/project_skeleton/configs/data/: project.yaml
templates/project_skeleton/configs/debug/: default.yaml
templates/project_skeleton/configs/experiment/: example.yaml
templates/project_skeleton/configs/extras/: default.yaml
templates/project_skeleton/configs/hparams_search/: mnist_optuna.yaml
templates/project_skeleton/configs/hydra/: default.yaml
templates/project_skeleton/configs/local/: default.yaml
templates/project_skeleton/configs/logger/: wandb.yaml
templates/project_skeleton/configs/model/: project.yaml
templates/project_skeleton/configs/paths/: default.yaml
templates/project_skeleton/configs/trainer/: default.yaml
templates/project_skeleton/scripts/: test.sh  train.sh
templates/project_skeleton/src/: eval.py  train.py
templates/project_skeleton/src/utils/: utils.py
templates/project_skeleton/tests/: test_configs.py
(+29 files in other folders)
