[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 99

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "TCH"]
ignore = ["PLR2004", "PLR0913", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "slow: marks tests as slow",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
